# astro-lab-backend

./: LICENSE  README.md  pyproject.toml
app/: database.db  main.py  main_routes.py
app/api/: routes.py
app/api/routes/: db_routes.py  hr_cluster_routes.py
app/core/: config.py
app/database/: check_schema.py  init_db.py
app/database/models/: hr_models.py
app/services/: data_ingestion_service.py  db_service.py  example_service.py  isochrone_service.py
app/tests/: test_main.py
app/utils/: db_utils.py
hubble_redshift/: pyproject.toml
hubble_redshift/galaxy_spectra/: config.py  galaxy_metadata_loader.py  sp_reader.py
hubble_redshift/galaxy_spectra/data/fallback_sp/: NGC1275.SP  NGC1357.SP  NGC1569.SP  NGC1832.SP  NGC2276.SP  NGC2775.SP  NGC2798.SP  NGC2903.SP  NGC3034.SP  NGC3077.SP  NGC3147.SP  NGC3227.SP  NGC3245.SP  NGC3303.SP  NGC3310.SP  NGC3368.SP  NGC3379.SP  NGC3471.SP  NGC3516.SP  NGC3623.SP  NGC3627.SP  NGC3690.SP  NGC3921.SP  NGC3941.SP  NGC4194.SP  NGC4262.SP  NGC4449.SP  NGC4472.SP  NGC4485.SP  NGC4631.SP  NGC4648.SP  NGC4670.SP  NGC4750.SP  NGC4775.SP  NGC4889.SP  NGC5195.SP  NGC5248.SP  NGC5548.SP  NGC5866.SP  NGC5996.SP  (+8 more)
hubble_redshift/tests/: test_sp_reader.py
stellar_isochrones/: pyproject.toml
stellar_isochrones/stellar_isochrones/: config.py  isochrones_loader.py  open_cluster_individual_query_process.py  open_cluster_list_query_process.py  zams_loader.py
stellar_isochrones/stellar_isochrones/data/: ZAMS.csv
stellar_isochrones/tests/: test_isochrones_loader.py  test_load_zams.py  test_oc_query.py  test_oc_star_query.py
