[project]
name = "astro-lab-backend"
version = "0.1.0"
description = "Backend for Astro Lab with APIs and data processing"
authors = [
    {name = "Doran Huh, 08dhuh@gmail.com"}
]
license = {text = "BSD 2-Clause License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "astropy (>=7.0.0,<8.0.0)",
    "astroquery (>=0.4.8,<0.5.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
matplotlib = "^3.10.0"
black = "^24.10.0"
mypy = "^1.14.1"

