[project]
name = "hubble-redshift"
version = "0.1.0"
description = "retrieval & manipulation of spectroscopic data"
authors = [
    {name = "Doran Huh",email = "08dhuh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "astroquery (>=0.4.10,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


