[project]
name = "stellar-isochrones"
version = "0.1.0"
description = ""
authors = [
    {name = "Doran Huh",email = "08dhuh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "astroquery (>=0.4.9.post1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
